# sqirvy-ai

./: .aider.conf.yml  .gitignore  .sqirvy_ai.config.yml  Makefile  README.md  diff.txt  files.sh  go.mod  go.sum  markdown  pyproject.toml  run-me.sh  setup.py
ai/: aicodeking.md
cmd/: Makefile
cmd/anthropic/: Makefile  main.go
cmd/deepseek/: main.go
cmd/gemini/: Makefile  main.go
cmd/openai/: Makefile  main.go
cmd/sqirvy/: .gitignore  Makefile  cli.go  cli_test.go  cmt.md  code.html  main.go  scrape.html  test.sh  x.md
cmd/sqirvy-cli/: Makefile  main.go
cmd/sqirvy-code/: Makefile  cli.go  code.md
cmd/sqirvy-pdf/: .gitignore  Makefile  cli.go  main.go  test.sh  timetravel.md
cmd/sqirvy-query/: Makefile  README.md  cli.go  files.go  main.go  models.go  test.sh  test_models.sh  test_query.sh
cmd/sqirvy-review/: Makefile  cli.go  main.go
cmd/sqirvy-scrape/: Makefile  cli.go  main.go  test.sh
doc/: api.md  golang-ai.md  sqirvy.drawio
examples/: .gitignore  Makefile
go/: .gitignore  CODE.md  Makefile  README.md  go.mod  podcast.txt
go/web/: web.md  (+2 more)
misc/: prompts.md  sqirvy.drawio
pkg/: Makefile
prompts/: blog.md  cobra.md  deepseek.md  makefile.md  pdf.md  readme-gen.md  scraper.md  sqirvy-cli.md  sqirvy-review.md  sqirvy-scrape.md  system.md  togehter.md  web-query.md
scripts/: .gitignore  build.sh  clean.sh  commit.sh  diff.sh  edit-pipe  files.sh  flashcards.sh  git-commit.sh  test.sh  tetris.sh
sqirvy_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: .sqirvy_ai.config.yml  sqirvy-doc.py  sqirvy-review.py
web/: Makefile
(+162 files in other folders)
